fixed responsive with alignment

--- a/footer.css
+++ b/footer.css
@@ -18,7 +18,7 @@
 }
 
 .form-style {
-    margin-left: 75px;
+    margin-left: 100px;
 }
 
 .input-style {
