--- a/navbar.css
+++ b/navbar.css
@@ -20,6 +20,7 @@ html, body {
     background-color: #255f5f;
     border: none;
     width: 100%;
+    height: 10%;
     z-index: 10;
 }
 
@@ -31,7 +32,7 @@ nav {
 .navbar-inverse .navbar-nav>.active>a {
     /* color: rgb(195, 255, 195) !important; */
     background-color: transparent !important;
-      text-decoration-line: underline;
+      /* text-decoration-line: underline; */
   text-decoration-style: solid;
   
     /* font-weight: bold; */
@@ -44,7 +45,7 @@ nav {
 }
 
 .navbar-inverse .navbar-nav>li>a:hover {
-      text-decoration-line: underline;
+      /* text-decoration-line: underline; */
   text-decoration-style: solid;
   transform: scale(1.1);
     /* color: rgb(195, 255, 195) !important; */
@@ -52,6 +53,7 @@ nav {
 
 .navbar-brand {
     width: 200px;
+    height: 55px;
     background-color: bisque;
     border-top-right-radius: 100px;
     border-bottom-right-radius: 100px;
